# farol2

./: .gitignore  .gitmodules  README.md
farol_actuation/control_allocation/: CMakeLists.txt  package.xml
farol_actuation/control_allocation/docs/: README.md  rpm_conversion.md  static_thruster_allocation.md  thruster_rudder_allocation.md
farol_actuation/control_allocation/include/: actuation_utils.hpp  rpm_conversion.hpp  static_thruster_allocation.hpp  throttle_conversion.hpp  thruster_rudder_allocation.hpp
farol_actuation/control_allocation/msg/: BodyWrenchRequest.msg  ThrusterForce.msg  ThrusterRPM.msg
farol_actuation/control_allocation/src/: rpm_conversion.cpp  static_thruster_allocation.cpp  throttle_conversion.cpp  thruster_rudder_allocation.cpp
farol_actuation/wrench_manager/: CMakeLists.txt  package.xml
farol_actuation/wrench_manager/include/: wrench_manager.hpp
farol_actuation/wrench_manager/src/: wrench_manager.cpp
farol_addons/console_parser/: CMakeLists.txt  package.xml
farol_addons/console_parser/docs/: README.md  console_path_parser.md
farol_addons/console_parser/include/: console_parser.h  formation.h  section.h
farol_addons/console_parser/src/: console_parser.cpp
farol_addons/console_server/: package.xml  setup.cfg  setup.py
farol_addons/console_server/src/console_server/: console_server.py
farol_addons/nav2console_state/: CMakeLists.txt  package.xml
farol_addons/nav2console_state/docs/: README.md  nav2console_state.md
farol_addons/nav2console_state/include/: nav2console_state.hpp
farol_addons/nav2console_state/src/: nav2console_state.cpp
farol_bringup/: package.xml  setup.cfg  setup.py
farol_bringup/config_default/: ros.yaml
farol_bringup/config_default/vehicles/magicelectric/: actuation.yaml  addons.yaml  control.yaml  drivers.yaml  nav.yaml  process.yaml
farol_bringup/config_default/vehicles/mred/: actuation.yaml  addons.yaml  control.yaml  drivers.yaml  planning.yaml  process.yaml  sim.yaml
farol_bringup/docs/: README.md  farol_bringup.md
farol_bringup/launch/: actuation.launch.py  addons.launch.py  bag_record.launch.py  control.launch.py  nav.launch.py  planning.launch.py  sim.launch.py
farol_bringup/src/farol_bringup/: farol_bringup_node.py
farol_control/inner_loop/open_loop/: CMakeLists.txt  package.xml
farol_control/inner_loop/open_loop/include/: open_loop.hpp
farol_control/inner_loop/open_loop/src/: open_loop.cpp
farol_control/inner_loop/pid/: CMakeLists.txt  package.xml
farol_control/inner_loop/pid/docs/: README.md  pid.md
farol_control/inner_loop/pid/include/: pid.hpp
farol_control/inner_loop/pid/src/: pid.cpp
farol_control/inner_loop/pid/srv/: ChangeParams.srv
farol_control/inner_loop/rudder/: CMakeLists.txt  package.xml
farol_control/inner_loop/rudder/include/: rudder.hpp
farol_control/inner_loop/rudder/src/: rudder.cpp
farol_control/outer_loop/path_following/: CMakeLists.txt  package.xml
farol_control/outer_loop/path_following/docs/: implementation.md  path_following.md
farol_control/outer_loop/path_following/include/algorithms/: Aguiar.h  Breivik.h  Fossen.h  Lapierre.h  Marcelo.h  PathFollowing.h  Pramod.h  RelativeHeading.h  Romulo.h  Samson.h
farol_control/outer_loop/path_following/include/ros/: PathFollowingNode.h
farol_control/outer_loop/path_following/src/algorithms/: Aguiar.cpp  Breivik.cpp  Fossen.cpp  Lapierre.cpp  Marcelo.cpp  PathFollowing.cpp  Pramod.cpp  RelativeHeading.cpp  Romulo.cpp  Samson.cpp
farol_control/outer_loop/path_following/src/ros/: PathFollowingNode.cpp  PathFollowingServices.cpp
farol_control/outer_loop/waypoint/: CMakeLists.txt  package.xml
farol_control/outer_loop/waypoint/docs/: sendWpType1.md  waypoint.md
farol_control/outer_loop/waypoint/include/: waypoint.hpp  wp_controller.h  wp_heading.h  wp_loose.h  wp_standard.h
farol_control/outer_loop/waypoint/src/: waypoint.cpp  wp_heading.cpp  wp_loose.cpp  wp_standard.cpp
farol_control/outer_loop/waypoint/srv/: SendWpType1.srv
farol_msgs/: CMakeLists.txt  package.xml
farol_msgs/docs/: README.md
farol_msgs/msg/: Formation.msg  GCS.msg  LocalDatum.msg  Measurement.msg  MultiSection.msg  NavigationState.msg  PFDebug.msg  ProcessState.msg  Section.msg  StateConsole.msg  Thruster.msg  UTM.msg
farol_msgs/srv/: ManageProcess.srv
farol_nav/: CMakeLists.txt  LICENSE  package.xml
farol_nav/docs/: README.md  filter_handler.md
farol_nav/include/: bypass_filter.hpp  filter_handler.hpp  navigation_filter_node.hpp
farol_nav/launch/: nav.launch.py
farol_nav/nav_filters/: CMakeLists.txt  package.xml
farol_nav/nav_filters/docs/: README.md  sample_and_hold.md
farol_nav/nav_filters/include/: filter_handler.hpp  sample_and_hold.hpp
farol_nav/nav_filters/src/: filter_handler.cpp  sample_and_hold.cpp
farol_nav/nav_filters/srv/: ChangeFilter.srv
farol_nav/src/: bypass_filter.cpp  filter_handler.cpp  navigation_filter_node.cpp  sample_and_hold.cpp
farol_planning/paths/: CMakeLists.txt  package.xml
farol_planning/paths/docs/: PathData.md  README.md  ResetPath.md  SetConstSpeed.md  SetMode.md  SpawnArc2D.md  SpawnBernoulli.md  SpawnCircle2D.md  SpawnLine.md  implementation.md  paths.md
farol_planning/paths/include/ros/: PathNode.h
farol_planning/paths/msg/: PathData.msg
farol_planning/paths/src/algorithms/: Path.cpp
farol_planning/paths/src/algorithms/path_sections/: Arc2D.cpp
farol_planning/paths/src/ros/: PathNode.cpp  PathServices.cpp
farol_sim/sim/: CMakeLists.txt  package.xml
farol_sim/sim/docs/: README.md
farol_sim/sim/include/: AUV.hpp  State.hpp  Utilis.hpp  sim_sensors.hpp  simulation.hpp
farol_sim/sim/src/: auv_simulation.cpp  sim_sensors.cpp  simulation.cpp
farol_sim/sim/srv/: ChangeSomethingPlaceholder.srv
farol_utils/: CMakeLists.txt  package.xml
farol_utils/docs/: farol_utils.md
farol_utils/include/: utils.hpp
